<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/depth3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/tv_main_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_label_title"
                android:textColor="@color/def_primary"
                android:textSize="@dimen/h3"
                android:textStyle="bold"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/tv_sub_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_label_message"
                android:textColor="@color/def_secondary"
                android:textSize="@dimen/b1"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_12"/>

            <TextView
                android:id="@+id/tv_add_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_label_button"
                android:textColor="@color/white"
                android:textSize="@dimen/b1"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@drawable/bg_add_label"
                android:paddingVertical="@dimen/spacing_12"
                android:paddingHorizontal="@dimen/spacing_40"
                android:layout_marginTop="@dimen/spacing_40"/>

        </LinearLayout>

    </RelativeLayout>

</layout>