<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


        <androidx.cardview.widget.CardView
            android:background="@color/transparent"
            android:padding="@dimen/spacing_x_large"
            android:layout_margin="@dimen/spacing_normal"
            app:cardCornerRadius="@dimen/spacing_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:orientation="vertical"
                android:padding="@dimen/spacing_xx_large">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:gravity="center"
                    android:text="@string/request_finish"
                    android:textColor="@color/white"
                    android:textSize="@dimen/b1"
                    app:layout_constraintBottom_toTopOf="@+id/select_button_guide_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_exit"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/all_exit"
                        android:textColor="@color/red_alert"
                        android:textSize="@dimen/b1"
                        app:layout_constraintEnd_toStartOf="@+id/tv_continue"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/select_button_guide_line" />

                    <TextView
                        android:id="@+id/tv_continue"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginTop="@dimen/spacing_normal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/all_continue"
                        android:textColor="@color/white"
                        android:textSize="@dimen/b1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/tv_exit"
                        app:layout_constraintTop_toTopOf="@+id/select_button_guide_line" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


</layout>