<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.nexters.fullstack.presentaion.viewmodel.HomeSearchViewModel" />
        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/depth3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_selected_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="@{vm.state().selectedLabel.size() == 0 ? View.GONE : View.VISIBLE}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_selected_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/padding_default">

            </androidx.recyclerview.widget.RecyclerView>

            <View
                android:id="@+id/border"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/rv_selected_label"
                android:background="@color/depth2"
                android:layout_marginTop="@dimen/padding_default">

            </View>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_recently_search_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/container_selected_label"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/spacing_40"
            android:text="@string/recentlySearch_title"
            android:textSize="@dimen/b2"
            android:textColor="@color/def_secondary">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recently_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_recently_search_title"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            android:layout_marginTop="@dimen/spacing_8"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_my_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rv_recently_search"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/spacing_40"
            android:text="@string/myLabel_title"
            android:textSize="@dimen/b2"
            android:textColor="@color/def_secondary">

        </TextView>
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_my_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_my_label_title"
            app:layoutManager="com.google.android.flexbox.FlexboxLayoutManager"
            android:layout_marginTop="@dimen/spacing_8">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_done"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/padding_default"
            android:background="@drawable/bg_btn_default"
            android:text="@string/search_btn"
            android:gravity="center"
            android:textSize="@dimen/b1"
            android:textColor="@color/white"
            android:clickable="@{vm.state().selectedLabel.size() == 0 ? false : true}">

        </TextView>

        <View
            android:id="@+id/container_disabled"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/padding_default"
            android:background="@drawable/bg_btn_disabled_layer"
            android:visibility="@{vm.state().selectedLabel.size() == 0 ? View.VISIBLE : View.GONE}">

        </View>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>